...
                  FIconButton(
                    onPressed: () => _onFavoritePressed(favorites, homeState),
                    icon: FIcon(
                      tooltip:
                          isFavorite(favorites, homeState)
                              ? 'desfavoritar'
                              : 'favoritar',
                      key: const Key('btnLike'),
                      icon: Icons.favorite,
                      color: _getIconFavoriteColor(favorites, homeState),
                    ),
                  ),
                ],
              ),
...
