enum MediaTypeEnum {
  image('Imagem do dia'),
  video('Video do dia');

  const MediaTypeEnum(this.label);
  final String label;
}
